fix: adjusted html structure further
feat: deletetd unnecessary css class

--- a/html/summary.html
+++ b/html/summary.html
@@ -91,68 +91,61 @@
                 <span class="contact-sub">Key Metrics at a Glance</span>
             </div>
             <div class="summary-content-layout">
-                <div>
-                    <section class="summary-cards-wrapper">
-                        <div class="summary-row summary-row-top">
-                            <div
-                                class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
-                                <img class="todo-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
-                                <div class="todo-info">
-                                    <div class="todo-number">0</div>
-                                    <div class="todo-label">To-Do</div>
-                                </div>
-                            </div>
-                            <div
-                                class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
-                                <img class="done-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
-                                <div class="done-info">
-                                    <div class="done-number">0</div>
-                                    <div class="done-label">Done</div>
-                                </div>
+                <div class="summary-cards-wrapper">
+                    <section class="summary-row summary-row-top">
+                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
+                            <img class="todo-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
+                            <div class="todo-info">
+                                <div class="todo-number">0</div>
+                                <div class="todo-label">To-Do</div>
                             </div>
                         </div>
-                        <div class="summary-row summary-row-urgent">
-                            <div class="urgent-card summary-container-height padding-all-cards">
-                                <div class="urgent-left">
-                                    <div class="urgent-icon-wrapper">
-                                        <img class="urgent-icon" src="../assets/icons/summary/urgent.svg"
-                                            alt="Urgent icon">
-                                    </div>
-                                    <div class="urgent-info">
-                                        <div class="urgent-number">0</div>
-                                        <div class="urgent-label">Urgent</div>
-                                    </div>
-                                </div>
-                                <div class="urgent-divider"></div>
-                                <div class="urgent-right">
-                                    <div class="urgent-date">No deadline</div>
-                                    <div class="urgent-deadline">Upcoming Deadline</div>
-                                </div>
+                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
+                            <img class="done-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
+                            <div class="done-info">
+                                <div class="done-number">0</div>
+                                <div class="done-label">Done</div>
                             </div>
                         </div>
                     </section>
-                    <section class="summary-stats-bottom">
-                        <div class="summary-row summary-row-stats">
-                            <div
-                                class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                                <div class="board-info">
-                                    <div class="board-number">0</div>
-                                    <div class="board-label">Tasks in Board</div>
+                    <section class="summary-row summary-row-urgent">
+                        <div class="urgent-card summary-container-height padding-all-cards">
+                            <div class="urgent-left">
+                                <div class="urgent-icon-wrapper">
+                                    <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
+                                </div>
+                                <div class="urgent-info">
+                                    <div class="urgent-number">0</div>
+                                    <div class="urgent-label">Urgent</div>
                                 </div>
                             </div>
-                            <div
-                                class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                                <div class="progress-info">
-                                    <div class="progress-number">0</div>
-                                    <div class="progress-label">Tasks in Progress</div>
-                                </div>
+                            <div class="urgent-divider"></div>
+                            <div class="urgent-right">
+                                <div class="urgent-date">No deadline</div>
+                                <div class="urgent-deadline">Upcoming Deadline</div>
                             </div>
-                            <div
-                                class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                                <div class="feedback-info">
-                                    <div class="feedback-number">0</div>
-                                    <div class="feedback-label">Awaiting Feedback</div>
-                                </div>
+                        </div>
+                    </section>
+                    <section class="summary-row summary-row-stats">
+                        <div
+                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            <div class="board-info">
+                                <div class="board-number">0</div>
+                                <div class="board-label">Tasks in Board</div>
+                            </div>
+                        </div>
+                        <div
+                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            <div class="progress-info">
+                                <div class="progress-number">0</div>
+                                <div class="progress-label">Tasks in Progress</div>
+                            </div>
+                        </div>
+                        <div
+                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            <div class="feedback-info">
+                                <div class="feedback-number">0</div>
+                                <div class="feedback-label">Awaiting Feedback</div>
                             </div>
                         </div>
                     </section>
