--- a/html/summary.html
+++ b/html/summary.html
@@ -94,28 +94,28 @@
                 <div class="summary-cards-wrapper">
                     <section class="summary-row summary-row-top">
                         <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
-                            <img class="todo-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
-                            <div class="todo-info">
-                                <div class="todo-number">0</div>
+                            <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
+                            <div class="summary-info">
+                                <div class="todo-number summary-number">0</div>
                                 <div class="todo-label">To-Do</div>
                             </div>
                         </div>
                         <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
-                            <img class="done-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
-                            <div class="done-info">
-                                <div class="done-number">0</div>
+                            <img class="summary-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
+                            <div class="summary-info">
+                                <div class="done-number summary-number">0</div>
                                 <div class="done-label">Done</div>
                             </div>
                         </div>
                     </section>
-                    <section class="summary-row summary-row-urgent">
+                    <section class="summary-row">
                         <div class="urgent-card summary-container-height padding-all-cards">
                             <div class="urgent-left">
                                 <div class="urgent-icon-wrapper">
                                     <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
                                 </div>
-                                <div class="urgent-info">
-                                    <div class="urgent-number">0</div>
+                                <div class="summary-info">
+                                    <div class="urgent-number summary-number">0</div>
                                     <div class="urgent-label">Urgent</div>
                                 </div>
                             </div>
@@ -129,22 +129,22 @@
                     <section class="summary-row summary-row-stats">
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                            <div class="board-info">
-                                <div class="board-number">0</div>
+                            <div class="summary-info">
+                                <div class="board-number summary-number">0</div>
                                 <div class="board-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                            <div class="progress-info">
-                                <div class="progress-number">0</div>
+                            <div class="summary-info">
+                                <div class="progress-number summary-number">0</div>
                                 <div class="progress-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
-                            <div class="feedback-info">
-                                <div class="feedback-number">0</div>
+                            <div class="summary-info">
+                                <div class="feedback-number summary-number">0</div>
                                 <div class="feedback-label">Awaiting Feedback</div>
                             </div>
                         </div>
