fix: improved css code

--- a/html/summary.html
+++ b/html/summary.html
@@ -92,7 +92,7 @@
             </div>
             <div class="summary-content-layout">
                 <div class="summary-cards-wrapper">
-                    <section class="summary-row summary-row-top">
+                    <section class="summary-row">
                         <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="summary-row">
+                    <section class="summary-card-second-row">
                         <div class="urgent-card summary-container-height padding-all-cards">
                             <div class="urgent-left">
                                 <div class="urgent-icon-wrapper">
