fix: summarized css code

--- a/html/summary.html
+++ b/html/summary.html
@@ -97,14 +97,14 @@
                             <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
                                 <div class="todo-number summary-number">0</div>
-                                <div class="todo-label">To-Do</div>
+                                <div class="number-label">To-Do</div>
                             </div>
                         </div>
                         <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
                             <div class="summary-info">
                                 <div class="done-number summary-number">0</div>
-                                <div class="done-label">Done</div>
+                                <div class="number-label">Done</div>
                             </div>
                         </div>
                     </section>
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="summary-info">
                                     <div class="urgent-number summary-number">0</div>
-                                    <div class="urgent-label">Urgent</div>
+                                    <div class="number-label">Urgent</div>
                                 </div>
                             </div>
                             <div class="urgent-divider"></div>
@@ -126,26 +126,26 @@
                             </div>
                         </div>
                     </section>
-                    <section class="summary-row summary-row-stats">
+                    <section class="summary-row">
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="board-number summary-number">0</div>
-                                <div class="board-label">Tasks in Board</div>
+                                <div class="number-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="progress-number summary-number">0</div>
-                                <div class="progress-label">Tasks in Progress</div>
+                                <div class="number-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div
                             class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="feedback-number summary-number">0</div>
-                                <div class="feedback-label">Awaiting Feedback</div>
+                                <div class="number-label">Awaiting Feedback</div>
                             </div>
                         </div>
                     </section>
