--- a/html/summary.html
+++ b/html/summary.html
@@ -93,14 +93,14 @@
             <div class="summary-content-layout">
                 <div class="summary-cards-wrapper">
                     <section class="summary-row">
-                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
+                        <div class="card-shadow summary-card summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
                                 <div class="todo-number summary-number">0</div>
                                 <div class="number-label">To-Do</div>
                             </div>
                         </div>
-                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
+                        <div class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
                             <div class="summary-info">
                                 <div class="done-number summary-number">0</div>
@@ -108,41 +108,39 @@
                             </div>
                         </div>
                     </section>
-                    <section class="summary-card-second-row">
-                        <div class="urgent-card summary-container-height padding-all-cards">
-                            <div class="urgent-left">
-                                <div class="urgent-icon-wrapper">
-                                    <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
-                                </div>
-                                <div class="summary-info">
-                                    <div class="urgent-number summary-number">0</div>
-                                    <div class="number-label">Urgent</div>
-                                </div>
+                    <section class="card-shadow summary-card-second-row urgent-card summary-container-height padding-all-cards">
+                        <div class="urgent-left">
+                            <div class="urgent-icon-wrapper">
+                                <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
                             </div>
-                            <div class="urgent-divider"></div>
-                            <div class="urgent-right">
-                                <div class="urgent-date">No deadline</div>
-                                <div class="urgent-deadline">Upcoming Deadline</div>
+                            <div class="summary-info">
+                                <div class="urgent-number summary-number">0</div>
+                                <div class="number-label">Urgent</div>
                             </div>
+                        </div>
+                        <div class="urgent-divider"></div>
+                        <div class="urgent-right">
+                            <div class="urgent-date">No deadline</div>
+                            <div class="urgent-deadline">Upcoming Deadline</div>
                         </div>
                     </section>
                     <section class="summary-row">
                         <div
-                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="board-number summary-number">0</div>
                                 <div class="number-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div
-                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="progress-number summary-number">0</div>
                                 <div class="number-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div
-                            class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="feedback-number summary-number">0</div>
                                 <div class="number-label">Awaiting Feedback</div>
