refactor: deletetd unused css code

--- a/html/summary.html
+++ b/html/summary.html
@@ -93,7 +93,7 @@
             <div class="summary-content-layout">
                 <div class="summary-cards-wrapper">
                     <section class="summary-row">
-                        <div class="card-shadow summary-card summary-cards-first-row summary-container-height padding-all-cards">
+                        <div class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
                                 <div class="todo-number summary-number">0</div>
