--- a/html/summary.html
+++ b/html/summary.html
@@ -126,21 +126,21 @@
                     </section>
                     <section class="summary-row">
                         <div
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
                                 <div class="board-number summary-number">0</div>
                                 <div class="number-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
                                 <div class="progress-number summary-number">0</div>
                                 <div class="number-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
                                 <div class="feedback-number summary-number">0</div>
                                 <div class="number-label">Awaiting Feedback</div>
