refactor: removed hardcoded numbers

--- a/html/summary.html
+++ b/html/summary.html
@@ -96,14 +96,14 @@
                         <div class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
-                                <div class="todo-number summary-number">0</div>
+                                <div class="todo-number summary-number"></div>
                                 <div class="number-label">To-Do</div>
                             </div>
                         </div>
                         <div class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="summary-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
                             <div class="summary-info">
-                                <div class="done-number summary-number">0</div>
+                                <div class="done-number summary-number"></div>
                                 <div class="number-label">Done</div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                 <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
                             </div>
                             <div class="summary-info">
-                                <div class="urgent-number summary-number">0</div>
+                                <div class="urgent-number summary-number"></div>
                                 <div class="number-label">Urgent</div>
                             </div>
                         </div>
@@ -128,21 +128,21 @@
                         <div
                             class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
-                                <div class="board-number summary-number">0</div>
+                                <div class="board-number summary-number"></div>
                                 <div class="number-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div
                             class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
-                                <div class="progress-number summary-number">0</div>
+                                <div class="progress-number summary-number"></div>
                                 <div class="number-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div
                             class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
                             <div class="summary-info">
-                                <div class="feedback-number summary-number">0</div>
+                                <div class="feedback-number summary-number"></div>
                                 <div class="number-label">Awaiting Feedback</div>
                             </div>
                         </div>
