--- a/html/login.html
+++ b/html/login.html
@@ -14,61 +14,47 @@
 </head>
 
 <body class="body">
-
     <div class="login-wrapper">
-
         <div class="login-logo-section">
             <img class="login-logo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
         </div>
-
         <div class="login-container">
-
             <div class="login-header">
                 <p class="login-header-text">Not a Join user?</p>
                 <a href="../html/signup.html" class="signup-button">Sign up</a>
             </div>
-
             <main class="login-card">
                 <h1 class="login-title">Log in</h1>
-
                 <form class="login-form" id="login-form" novalidate>
-
                     <div class="input-wrapper">
-                        <input autocomplete="username" type="email" id="login-email" class="login-input" placeholder="Email" required>
+                        <input autocomplete="username" type="email" id="login-email" class="login-input"
+                            placeholder="Email" required>
                         <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
                     </div>
-
                     <div class="input-wrapper">
-                        <input autocomplete="current-password" type="password" id="login-password" class="login-input" placeholder="Password" required>
+                        <input autocomplete="current-password" type="password" id="login-password" class="login-input"
+                            placeholder="Password" required>
                         <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     </div>
-
                     <div class="login-buttons">
                         <button type="submit" class="login-button-primary" id="login-btn">
                             Log in
                         </button>
-
                         <button type="button" class="login-button-secondary guest-button" id="guest-login-btn">
                             Guest Log in
                         </button>
                     </div>
                 </form>
-
                 <p class="login-error-message" id="login-error-message"></p>
-
             </main>
-
             <footer class="login-footer">
                 <a href="../html/privacyPolicy.html">Privacy Policy</a>
                 <a href="../html/legalNotice.html">Legal notice</a>
             </footer>
-
         </div>
     </div>
-
-    <script src="../scripts/firebase.js"></script>
-    <script src="../scripts/login_and_summary/login.js" defer></script>
-
 </body>
+<script src="../scripts/firebase.js"></script>
+<script src="../scripts/login_and_summary/login.js" defer></script>
 
 </html>
