feat: added avatar button in all html files where needed

--- a/html/help.html
+++ b/html/help.html
@@ -61,9 +61,20 @@
                     <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
-                    <a href="#">
-                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
+                    <button type="button" class="avatar-wrapper" id="avatar-button">
+                        <div id="header-avatar" class="header-avatar"></div>
+                    </button>
+                    <div id="avatar-menu" class="avatar-menu hidden">
+                        <button type="button" class="avatar-menu-item" id="menu-legal">
+                            Legal Notice
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-privacy">
+                            Privacy Policy
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-logout">
+                            Log out
+                        </button>
+                    </div>
                 </section>
             </nav>
         </header>
