feat: added avatar.js in all files needed

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../style/add_task_responsive.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
+    <script src="../scripts/login_and_summary/avatar.js"></script>
 </head>
 
 <body class="body">
