--- a/html/contacts.html
+++ b/html/contacts.html
@@ -22,6 +22,7 @@
     <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../scripts/contacts/contact_template.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
+    <script src="../scripts/login_and_summary/avatar.js"></script>
 
 
 </head>
