--- a/html/board.html
+++ b/html/board.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
+    <script src="../scripts/login_and_summary/avatar.js"></script>
 </head>
 
 <body class="body">
