--- a/html/help.html
+++ b/html/help.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../style/legal_privacy_help_responsive.css">
 
     <script src="../scripts/legal_privacy_help.js"></script>
+    <script src="../scripts/login_and_summary/avatar.js"></script>
 
 
 </head>
