--- a/html/add_task.html
+++ b/html/add_task.html
@@ -197,8 +197,11 @@
         </main>
     </article>
     <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/contacts/contact_data.js"></script>
+    <script src="../script.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
     <script src="../scripts/add_task.js"></script>
+
 </body>
 
 </html>
