fixed sidebar moving with the content

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="body">
-    <aside class="sidebar">
+    <aside class="sidebar sidebar-sticky">
         <div class="sidebar_upper_section">
             <section class="logo-section">
                 <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
