--- a/html/summary.html
+++ b/html/summary.html
@@ -125,21 +125,21 @@
                     </section>
                     <section class="summary-row">
                         <div onclick="directToBoard()"
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="board-number summary-number"></div>
                                 <div class="number-label">Tasks in Board</div>
                             </div>
                         </div>
                         <div onclick="directToBoard()" 
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="progress-number summary-number"></div>
                                 <div class="number-label">Tasks in Progress</div>
                             </div>
                         </div>
                         <div onclick="directToBoard()"
-                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height">
+                            class="card-shadow summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                             <div class="summary-info">
                                 <div class="feedback-number summary-number"></div>
                                 <div class="number-label">Awaiting Feedback</div>
