feat: added important to logo to be visible when responsiv

--- a/html/summary.html
+++ b/html/summary.html
@@ -7,13 +7,14 @@
     <title>Summary</title>
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="stylesheet" href="../style/add_task_responsive.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/summary_login/summary.css">
     <link rel="stylesheet" href="../style/summary_login/summary_responsive.css">
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/contacts/contacts.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
-
+    
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
     <script src="../scripts/login_and_summary/login.js"></script>
@@ -76,7 +77,6 @@
                         </button>
                     </div>
                 </section>
-            </nav>
             </nav>
         </header>
         <main class="main-content">
