fix: adjusted mainframe css to hide  help icon when in responsiv

--- a/html/board.html
+++ b/html/board.html
@@ -50,7 +50,7 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="../html/help.html">
+                    <a class="hide-in-resp" href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <button type="button" class="avatar-wrapper" id="avatar-button">
