--- a/html/summary.html
+++ b/html/summary.html
@@ -59,7 +59,7 @@
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="../html/help.html">
+                    <a class="hide-in-resp" href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <button type="button" class="avatar-wrapper" id="avatar-button">
