--- a/html/summary.html
+++ b/html/summary.html
@@ -92,14 +92,14 @@
             <div class="summary-content-layout">
                 <div class="summary-cards-wrapper">
                     <section class="summary-row">
-                        <a href="../html/board.html" onmouseover="updateIconSrc('toDoIcon', '../assets/icons/summary/toDo_white.svg')" onmouseout="updateIconSrc('toDoIcon', '../assets/icons/summary/toDo.svg')" class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
+                        <a href="../html/board.html" class="to-do-container card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img id="toDoIcon" class="summary-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="summary-info">
                                 <div class="todo-number summary-number"></div>
                                 <div class="number-label">To-Do</div>
                             </div>
                         </a>
-                        <a href="../html/board.html" onmouseover="updateIconSrc('doneIcon', '../assets/icons/summary/done_white.svg')" onmouseout="updateIconSrc('doneIcon', '../assets/icons/summary/done.svg')" class="card-shadow summary-cards-first-row summary-container-height padding-all-cards">
+                        <a href="../html/board.html" class="done-container card-shadow summary-cards-first-row summary-container-height padding-all-cards">
                             <img id="doneIcon" class="summary-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
                             <div class="summary-info">
                                 <div class="done-number summary-number"></div>
