--- a/html/add_task.html
+++ b/html/add_task.html
@@ -15,7 +15,7 @@
     <script src="../scripts/login_and_summary/avatar.js"></script>
 </head>
 
-<body class="body">
+<body class="body" onload="loadContactsForAssign()">
     <aside class="sidebar sidebar-sticky">
         <div class="sidebar_upper_section">
             <section class="logo-section">
