style: fix inline-style login-buttons; fix margin-top sign up button and signup-card

--- a/html/signup.html
+++ b/html/signup.html
@@ -58,7 +58,7 @@
                     <input type="checkbox" id="privacy-checkbox">
                     <span> I accept the <a href="#">Privacy policy</a></span>
                 </label>
-                <div class="login-buttons" style="margin-top: 24px;">
+                <div class="login-buttons">
                     <button type="submit" class="login-button-primary" id="signup-btn" disabled>
                         Sign up
                     </button>
