style: fix signup button and Checkbox, fix inline style

--- a/html/signup.html
+++ b/html/signup.html
@@ -54,12 +54,12 @@
                     <span class="input-error" id="error-signup-password-confirm"></span>
                 </div>
 
-                <label class="privacy-check" style="align-self: flex-start; margin-top: 8px;">
+                <label class="privacy-check">
                     <input type="checkbox" id="privacy-checkbox">
                     <span> I accept the <a href="#">Privacy policy</a></span>
                 </label>
                 <div class="login-buttons">
-                    <button type="submit" class="login-button-primary" id="signup-btn" disabled>
+                    <button type="submit" class="signup-button-primary" id="signup-btn" disabled>
                         Sign up
                     </button>
                 </div>
