delete unused classes

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -209,7 +209,7 @@
                 </aside>
             </article>
             <div id="responseToast" class="responseToastContent add-task-toast-adaption">
-                <p class="white font-size-20">Task added to board</p>
+                <p>Task added to board</p>
                 <img src="../assets/icons/sideBar/board.svg" alt="image of board icon">
             </div>
         </main>
