--- a/html/board.html
+++ b/html/board.html
@@ -74,7 +74,7 @@
             <div id="overlay" class="overlay" onclick="closeOverlayByBackdrop(event)">
                 <div id="overlay_content" class="overlay_content"></div>
                 <div id="responseToast" class="responseToastContent">
-                    <p class="white font-size-20">Task added to board</p>
+                    <p>Task added to board</p>
                     <img src="../assets/icons/sideBar/board.svg" alt="image of board icon">
                 </div>
             </div>
