added responsive css and linked

--- a/html/board.html
+++ b/html/board.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../style/board_overlay_style.css">
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
+    <link rel="stylesheet" href="../style/board_responsive.css">
+    <link rel="stylesheet" href="../style/board_overlay_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
     <script src="../scripts/login_and_summary/avatar.js"></script>
