added new add task button

--- a/html/board.html
+++ b/html/board.html
@@ -82,7 +82,12 @@
                 </div>
             </div>
             <section class="board_menu">
-                <h1>Board</h1>
+                <div class="h1_section">
+                    <h1>Board</h1>
+                    <button class="repsonsive_add_task_button" onclick="openAddTaskOverlay(this)" data-task-state="todo">
+                        <img class="add_task_res_btn" src="../assets/icons/board/addTaskButtonRes.svg" alt="Add Task icon">
+                    </button>
+                </div>
                 <div class="board_controls_container">
                     <div class="board_controls">
                             <div class="search_task">
