--- a/html/board.html
+++ b/html/board.html
@@ -51,6 +51,7 @@
     <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
+                <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a class="hide-in-resp" href="../html/help.html">
