--- a/html/board.html
+++ b/html/board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -85,13 +86,15 @@
             <section class="board_menu">
                 <div class="h1_section">
                     <h1>Board</h1>
-                    <button class="repsonsive_add_task_button" onclick="openAddTaskOverlay(this)" data-task-state="todo">
-                        <img class="add_task_res_btn" src="../assets/icons/board/addTaskButtonRes.svg" alt="Add Task icon">
+                    <button class="repsonsive_add_task_button" onclick="openAddTaskOverlay(this)"
+                        data-task-state="todo">
+                        <img class="add_task_res_btn" src="../assets/icons/board/addTaskButtonRes.svg"
+                            alt="Add Task icon">
                     </button>
                 </div>
                 <div class="board_controls_container">
                     <div class="board_controls">
-                            <div class="search_task">
+                        <div class="search_task">
                             <input type="text" placeholder="Find Task" id="task_filter_input_field">
                             <button>
                                 <img src="../assets/icons/board/search_glas.svg" alt="">
@@ -107,34 +110,44 @@
                     </div>
                 </div>
             </section>
-            <section class="table_header">
-                <div class="column_header">
-                    <p class="column_title">To do</p>
-                    <button onclick="openAddTaskOverlay(this)" data-task-state="todo">
-                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
-                    </button>
-                </div>
-                <div class="column_header">
-                    <p class="column_title">In progress</p>
-                    <button onclick="openAddTaskOverlay(this)" data-task-state="in progress">
-                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
-                    </button>
-                </div>
-                <div class="column_header">
-                    <p class="column_title">Await feedback</p>
-                    <button onclick="openAddTaskOverlay(this)" data-task-state="awaiting feedback">
-                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
-                    </button>
-                </div>
-                <div class="column_header">
-                    <p class="column_title">Done</p>
-                </div>
-            </section>
             <section class="board_table">
-                <div class="column_content" id="toDoColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                <div class="column_content" id="inProgressColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
+                <div>
+                    <div class="column_header">
+                        <p class="column_title">To do</p>
+                        <button onclick="openAddTaskOverlay(this)" data-task-state="todo">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="column_content" id="toDoColumn" ondrop="dropHandler(event)"
+                        ondragover="dragOverHandler(event)"></div>
+                </div>
+                <div>
+                    <div class="column_header">
+                        <p class="column_title">In progress</p>
+                        <button onclick="openAddTaskOverlay(this)" data-task-state="in progress">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="column_content" id="inProgressColumn" ondrop="dropHandler(event)"
+                        ondragover="dragOverHandler(event)"></div>
+                </div>
+                <div>
+                    <div class="column_header">
+                        <p class="column_title">Await feedback</p>
+                        <button onclick="openAddTaskOverlay(this)" data-task-state="awaiting feedback">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)"
+                        ondragover="dragOverHandler(event)"></div>
+                </div>
+                <div>
+                    <div class="column_header">
+                        <p class="column_title">Done</p>
+                    </div>
+                    <div class="column_content" id="doneColumn" ondrop="dropHandler(event)"
+                        ondragover="dragOverHandler(event)"></div>
+                </div>
             </section>
         </main>
     </article>
