--- a/html/login.html
+++ b/html/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/summary_login/login.css">
     <link rel="stylesheet" href="../style/summary_login/login_responsive.css">
+    <link rel="stylesheet" href="../style/mainframe.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
 
