--- a/html/signup.html
+++ b/html/signup.html
@@ -33,7 +33,9 @@
         <div class="login-header">
         </div>
         <main class="login-card signup-card">
-            <a href="../html/login.html" class="back-arrow"></a>
+            <a href="../html/login.html" class="back-arrow">
+                <img class="hover-img" src="../assets/icons/signUp/back_arrow_short.svg" alt="Back to login">
+            </a>
             <h1 class="login-title">Sign up</h1>
             <form class="signup-form" id="signup-form" novalidate>
                 <label class="padding-sign-up-input subtask-section name">
